Base portal add base API

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,31 +1,22 @@
-# Files in the config/locales directory are used for internationalization and
-# are automatically loaded by Rails. If you want to use locales other than
-# English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t "hello"
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t("hello") %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# To learn more about the API, please read the Rails Internationalization guide
-# at https://guides.rubyonrails.org/i18n.html.
-#
-# Be aware that YAML interprets the following case-insensitive strings as
-# booleans: `true`, `false`, `on`, `off`, `yes`, `no`. Therefore, these strings
-# must be quoted to be interpreted as strings. For example:
-#
-#     en:
-#       "yes": yup
-#       enabled: "ON"
-
 en:
   hello: "Hello world"
+  error:
+    record_not_found: "Record not found"
+    api_limit_exceeded: "API limit exceeded"
+    email_missing: "Email is missing"
+    unauthorized: "Unauthorized"
+    forbidden: "Forbidden"
+    invalid_signature: "Invalid signature"
+    invalid_timestamp_format: "Invalid timestamp format"
+    retry_action: "Please retry again"
+    user_not_found: "User not found"
+    something_went_wrong: "Something went wrong"
+    service_unavailable: "Service unavailable"
+    not_found: "%{model} not found"
+    not_image: "is not an image"
+    too_large: "is too large"
+  activerecord:
+    errors:
+      models:
+        admin_user:
+          not_found: "Admin user not found"
