Add Nonce service tests and translations

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,3 +28,10 @@ en:
           attributes:
             coin_amount:
               exceed_available_balance: "exceeds available balance"
+  activemodel:
+    errors:
+      models:
+        nonce:
+          attributes:
+            base:
+              already_used: "already_used"
