fix: update factories and tests for coin withdrawal, deposit operation and merchant escrow

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -22,6 +22,8 @@ en:
           not_found: "Admin user not found"
         merchant_escrow:
           attributes:
+            user:
+              not_merchant: "must be a merchant"
             usdt_amount:
               exceed_available_balance: "USDT amount exceeds available balance"
         coin_withdrawal:
