Add internal transfer functionality for coin withdrawals
- Introduced a new model `CoinInternalTransferOperation` to handle internal transfers between users.
- Updated `CoinWithdrawal` model to support internal transfers, including validations for receiver email and conditional logic for creating operations.
- Modified API to accept parameters for internal transfers and return appropriate responses.
- Created a new Grape Entity for formatting API responses related to coin withdrawals.
- Added tests for internal transfer creation, validation, and retrieval to ensure functionality works as expected.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -15,6 +15,8 @@ en:
     not_found: "%{model} not found"
     not_image: "is not an image"
     too_large: "is too large"
+    messages:
+      cannot_transfer_to_self: "cannot transfer to self"
   activerecord:
     errors:
       models:
@@ -37,3 +39,7 @@ en:
           attributes:
             base:
               already_used: "already_used"
+  errors:
+    attributes:
+      receiver_email:
+        cannot_transfer_to_self: "cannot transfer to self"
