Add cryptocurrency address validation and enhance CoinWithdrawal model
- Introduced the `adequate_crypto_address` gem for validating cryptocurrency addresses.
- Added a new service class `CryptocurrencyAddressValidator` to handle address validation logic for various cryptocurrency layers including Solana, Bitcoin, and EVM addresses.
- Updated the `CoinWithdrawal` model to include a new validation method for checking the format of the coin address, ensuring it adheres to the expected standards.
- Enhanced the `SUPPORTED_NETWORKS` in `CoinAccount` to include Solana as a supported network.
- Updated relevant tests to cover the new validation logic and ensure proper functionality across different scenarios.
- Added error messages for invalid address formats in the localization files.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -17,6 +17,7 @@ en:
     too_large: "is too large"
     messages:
       cannot_transfer_to_self: "cannot transfer to self"
+      invalid_format: "has invalid format"
   activerecord:
     errors:
       models:
@@ -32,6 +33,8 @@ en:
           attributes:
             coin_amount:
               exceed_available_balance: "exceeds available balance"
+            coin_address:
+              invalid_format: "has invalid format"
   activemodel:
     errors:
       models:
@@ -43,3 +46,5 @@ en:
     attributes:
       receiver_email:
         cannot_transfer_to_self: "cannot transfer to self"
+      coin_address:
+        invalid_format: "has invalid format"
