Escrows => Fiat Mint

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -133,13 +133,13 @@
     "fetchOfferFailed": "Failed to fetch offer details.",
     "offerNotFound": "Offer not found.",
     "invalidOfferData": "Invalid offer data received.",
-    "escrows": {
-      "title": "Escrows",
-      "createTitle": "Create New Escrow",
-      "listTitle": "Escrow List",
-      "create": "Create Escrow",
-      "creating": "Creating...",
-      "detail": "Escrow Detail",
+    "mintFiat": {
+      "title": "Mint Fiat",
+      "createTitle": "Mint New Fiat",
+      "listTitle": "Fiat Mint List",
+      "create": "Mint Fiat",
+      "creating": "Minting...",
+      "detail": "Fiat Mint Detail",
       "usdt": "USDT",
       "fiatAmount": "Fiat Amount",
       "fiatCurrency": "Fiat Currency",
@@ -158,27 +158,27 @@
       "actions": "Actions",
       "cancel": "Cancel",
       "viewDetail": "View Detail",
-      "noEscrows": "No escrows found.",
+      "noMints": "No fiat mints found.",
       "loading": "Loading...",
       "currentRates": "Current Rates",
       "usdtAmount": "USDT Amount",
       "usdtAmountPlaceholder": "Enter USDT amount",
-      "createSuccess": "Escrow created successfully!",
-      "fetchError": "Error fetching escrows",
+      "createSuccess": "Fiat minted successfully!",
+      "fetchError": "Error fetching fiat mints",
       "validationError": "Please fill in all required fields",
-      "createError": "Error creating escrow",
+      "createError": "Error minting fiat",
       "insufficientBalance": "Insufficient USDT balance",
-      "cancelSuccess": "Escrow cancelled successfully",
-      "cancelError": "Error cancelling escrow",
+      "cancelSuccess": "Fiat mint cancelled successfully",
+      "cancelError": "Error cancelling fiat mint",
       "estimatedFiatAmount": "Estimated fiat amount",
-      "creationSuccess": "Escrow created successfully!",
-      "creationError": "Failed to create escrow.",
-      "cancellationSuccess": "Escrow cancelled successfully!",
-      "cancellationError": "Failed to cancel escrow.",
+      "creationSuccess": "Fiat minted successfully!",
+      "creationError": "Failed to mint fiat.",
+      "cancellationSuccess": "Fiat mint cancelled successfully!",
+      "cancellationError": "Failed to cancel fiat mint.",
       "id": "ID",
       "fiatAmountLabel": "Fiat Amount",
       "statusHeader": "Status",
-      "confirmCreate": "Create Escrow for",
+      "confirmCreate": "Mint Fiat for",
       "error": "Error",
       "currentBalance": "Current Balance"
     },
