--- a/client/src/i18n/fil.json
+++ b/client/src/i18n/fil.json
@@ -140,13 +140,13 @@
     "fetchOfferFailed": "Hindi makuha ang mga detalye ng alok",
     "offerNotFound": "Hindi nahanap ang alok",
     "invalidOfferData": "Hindi wastong datos ng alok ang natanggap",
-    "escrows": {
-      "title": "Pamamahala ng Escrow",
-      "createTitle": "Lumikha ng Bagong Escrow",
-      "listTitle": "Listahan ng Escrow",
-      "create": "Lumikha ng Escrow",
-      "creating": "Lumilikha...",
-      "detail": "Detalye ng Escrow",
+    "mintFiat": {
+      "title": "Mag-mint ng Fiat",
+      "createTitle": "Mag-mint ng Bagong Fiat",
+      "listTitle": "Listahan ng Fiat Mint",
+      "create": "Mag-mint ng Fiat",
+      "creating": "Nagmi-mint...",
+      "detail": "Detalye ng Fiat Mint",
       "usdt": "USDT",
       "fiatAmount": "Halaga ng Fiat",
       "fiatCurrency": "Fiat Currency",
@@ -165,27 +165,27 @@
       "actions": "Mga Aksyon",
       "cancel": "Kanselahin",
       "viewDetail": "Tingnan ang Detalye",
-      "noEscrows": "Walang nahanap na escrow",
+      "noMints": "Walang nahanap na fiat mints.",
       "loading": "Naglo-load...",
       "currentRates": "Kasalukuyang Rate",
       "usdtAmount": "Halaga ng USDT",
       "usdtAmountPlaceholder": "Ilagay ang halaga ng USDT",
-      "createSuccess": "Matagumpay na nalikha ang escrow!",
-      "fetchError": "Error sa pagkuha ng escrows",
+      "createSuccess": "Matagumpay na na-mint ang Fiat!",
+      "fetchError": "Error sa pagkuha ng mga fiat mint",
       "validationError": "Mangyaring punan ang lahat ng kinakailangang field",
-      "createError": "Error sa paglikha ng escrow",
+      "createError": "Error sa pag-mint ng fiat",
       "insufficientBalance": "Hindi sapat ang balanse ng USDT",
-      "cancelSuccess": "Matagumpay na nakansela ang escrow",
-      "cancelError": "Error sa pagkansela ng escrow",
+      "cancelSuccess": "Matagumpay na nakansela ang fiat mint",
+      "cancelError": "Error sa pagkansela ng fiat mint",
       "estimatedFiatAmount": "Tinatayang halaga ng fiat",
-      "creationSuccess": "Matagumpay na nalikha ang escrow",
-      "creationError": "Hindi malikha ang escrow",
-      "cancellationSuccess": "Matagumpay na na-cancel ang escrow",
-      "cancellationError": "Hindi ma-cancel ang escrow",
+      "creationSuccess": "Matagumpay na na-mint ang Fiat",
+      "creationError": "Hindi ma-mint ang fiat",
+      "cancellationSuccess": "Matagumpay na na-cancel ang fiat mint",
+      "cancellationError": "Hindi ma-cancel ang fiat mint",
       "id": "ID",
       "fiatAmountLabel": "Halaga ng Fiat",
       "statusHeader": "Katayuan",
-      "confirmCreate": "Lumikha ng Escrow para sa",
+      "confirmCreate": "Mag-mint ng Fiat para sa",
       "error": "Error",
       "currentBalance": "Kasalukuyang Balanse"
     },
