--- a/client/src/i18n/vi.json
+++ b/client/src/i18n/vi.json
@@ -140,13 +140,13 @@
     "fetchOfferFailed": "Không thể tải chi tiết đề xuất",
     "offerNotFound": "Không tìm thấy đề xuất",
     "invalidOfferData": "Dữ liệu đề xuất không hợp lệ",
-    "escrows": {
-      "title": "Quản lý Escrow",
-      "createTitle": "Tạo Escrow Mới",
-      "listTitle": "Danh sách Escrow",
-      "create": "Tạo Escrow",
-      "creating": "Đang tạo...",
-      "detail": "Chi tiết Escrow",
+    "mintFiat": {
+      "title": "Phát hành Fiat",
+      "createTitle": "Phát hành Fiat Mới",
+      "listTitle": "Danh sách Fiat đã phát hành",
+      "create": "Phát hành Fiat",
+      "creating": "Đang phát hành...",
+      "detail": "Chi tiết Fiat",
       "usdt": "USDT",
       "fiatAmount": "Số tiền Fiat",
       "fiatCurrency": "Tiền tệ Fiat",
@@ -165,25 +165,25 @@
       "actions": "Hành động",
       "cancel": "Hủy",
       "viewDetail": "Xem chi tiết",
-      "noEscrows": "Không tìm thấy escrow nào",
-      "fetchError": "Không thể tải danh sách escrow",
-      "createError": "Không thể tạo escrow",
-      "createSuccess": "Tạo escrow thành công",
-      "cancelError": "Không thể hủy escrow",
-      "cancelSuccess": "Đã hủy escrow thành công",
+      "noMints": "Không tìm thấy mục nào.",
+      "fetchError": "Không thể tải danh sách phát hành",
+      "createError": "Không thể phát hành Fiat",
+      "createSuccess": "Phát hành Fiat thành công",
+      "cancelError": "Không thể hủy phát hành Fiat",
+      "cancelSuccess": "Đã hủy phát hành Fiat thành công",
       "validationError": "Vui lòng nhập số lượng và loại tiền",
       "insufficientBalance": "Số dư không đủ",
       "currentRates": "Tỷ Giá Hiện Tại",
       "estimatedFiatAmount": "Số Tiền Fiat Ước Tính",
-      "confirmCreate": "Tạo Escrow cho",
+      "confirmCreate": "Phát hành Fiat cho",
       "error": "Lỗi",
-      "creationSuccess": "Tạo escrow thành công!",
+      "creationSuccess": "Phát hành Fiat thành công!",
       "loading": "Đang tải...",
       "usdtAmount": "Số lượng USDT",
       "usdtAmountPlaceholder": "Nhập số lượng USDT",
-      "creationError": "Không thể tạo escrow",
-      "cancellationSuccess": "Hủy escrow thành công",
-      "cancellationError": "Không thể hủy escrow",
+      "creationError": "Không thể phát hành Fiat",
+      "cancellationSuccess": "Hủy phát hành Fiat thành công",
+      "cancellationError": "Không thể hủy phát hành Fiat",
       "id": "ID",
       "fiatAmountLabel": "Số tiền Fiat",
       "statusHeader": "Trạng thái",
